--- a/css/bio.css
+++ b/css/bio.css
@@ -134,4 +134,6 @@ body {
   -ms-grid-column-align: center;
       justify-self: center;
 }
+
+/* Responsive */
 /*# sourceMappingURL=bio.css.map */
