--- a/css/bio.scss
+++ b/css/bio.scss
@@ -46,17 +46,10 @@ body {
     margin-left: 2%;
     }
 
-    .bio-img {
-    width: 99%;
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    justify-self: center;
-        align-self: center;
-    }
+    .bio-img img {
+    display: none;
 }
-
+}
 
 .foot {
     height: 220px;
@@ -122,11 +115,9 @@ body {
 @media only screen and (max-width: 600px) {
 
     .bio-con {
-        width: 600;
-        display: grid;
-        grid-column-gap: 1%;
-        grid-template-columns: 20% 30% 30% 20%;
-        grid-template-rows: 3% 5% 5% 5%;
+        width: 290;
+        display: flex;
+        flex-direction: column;
         margin-left: auto;
         margin-right: auto;
     
@@ -134,11 +125,7 @@ body {
         font-weight: $bweight;
         font-size: $osize;
         font-family: $font;
-        grid-column-start: 2;
-        grid-column-end: 2;
-        grid-row-start: 1;
-        grid-row-end: 1;
-        margin-left: 2%;
+        text-align: center;
         }
     
         .pbio {
@@ -146,84 +133,14 @@ body {
         font-style: normal;
         font-weight: 300;
         font-size: $psize;
-        grid-column-start: 2;
-        grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end: 3;
         margin-left: 2%;
         }
     
         .bio-img {
-        width: 99%;
-        grid-column-start: 3;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 4;
-        justify-self: center;
-            align-self: center;
+            display: none;
         }
     }
     
-    
-    .foot {
-        height: 220px;
-        background-color: $main-color1;
-        color: $main-color3;
-        font-family: $font;
-        display: grid;
-        grid-template-columns: 20% 15% 22% 13% 30%;
-        grid-template-rows: 20% 15% 5%;
-        margin-top: 18.1%;
-        padding-top: 1.5%;
-    
-        .item1 {
-            font-size: $osize;
-            font-weight: $bweight;
-            grid-column-start: 1;
-            grid-column-end: 1;
-            grid-row-start: 1;
-            grid-row-end: 1;
-            justify-self: end;
-            align-self: center;
-        }
-    
-        .item2 {
-            font-size: $psize;
-            font-weight: $lweight;
-            font-style: normal;
-            grid-column-start: 1;
-            grid-column-end: 1;
-            grid-row-start: 2;
-            grid-row-end: 3;
-            justify-self: center;
-            align-self: start;
-        }
-    
-        .item3 {
-            font-size: $psize;
-            font-weight: $lweight;
-            font-style: normal;
-            grid-column-start: 3;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            justify-self: center;
-            align-self: start;
-        }
-    
-        .item4 {
-            font-size: $psize;
-            font-weight: $lweight;
-            font-style: normal;
-            grid-column-start: 5;
-            grid-column-end: 5;
-            grid-row-start: 1;
-            grid-row-end: 2;
-            justify-self: center;
-        }
-    }
-    
-
 
     .foot{
         width: 260;
@@ -231,7 +148,7 @@ body {
     background-color: $main-color1;
     color: $main-color3;
     font-family: $font;
-    margin-top: 170%;
+    margin-top: 15%;
     grid-template-columns: 20% 13% 20% 13% 25%;
     }
 
